# OpenSnapTracker

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  PLANS.md  PROJECT.md  README.md
.github/workflows/: ci.yml
apps/electron-spike/: README.md  package-lock.json  package.json  tsconfig.json
apps/electron-spike/src/: index.html  main.ts  styles.css
apps/tauri-spike/: README.md  index.html  package-lock.json  package.json
apps/tauri-spike/src/: main.ts  styles.css
apps/tauri-spike/src-tauri/: Cargo.toml  tauri.conf.json
apps/tauri-spike/src-tauri/capabilities/: default.json
apps/tauri-spike/src-tauri/src/: main.rs
crates/domain/: Cargo.toml
crates/domain/src/: lib.rs
crates/image-cache/: Cargo.toml
crates/image-cache/src/: lib.rs
crates/metadata-client/: Cargo.toml
crates/metadata-client/src/: lib.rs
crates/state-capture/: Cargo.toml
crates/state-capture/src/: main.rs
crates/state-reader/: Cargo.toml
crates/state-reader/src/: lib.rs
crates/storage/: Cargo.toml
crates/storage/migrations/: 0001_initial.sql
crates/storage/src/: lib.rs
crates/tracker-sidecar/: Cargo.toml
crates/tracker-sidecar/src/: live_log.rs  main.rs
crates/x11-focus-helper/: Cargo.toml
crates/x11-focus-helper/src/: main.rs
docs/: architecture.md  metadata-protocol.md  overlay-spike.md  state-capture.md  testing.md
docs/handoffs/: 2026-07-15-home-session.md
fixtures/metadata/: abomination.json  viv-vision.json
fixtures/snapshots/: sanitized-active-turn.json  sanitized-discard-after.json  sanitized-draw-after.json  sanitized-graveyard-after.json  sanitized-transition-after.json  synthetic-game-state.json
scripts/: check.sh  snap-file-activity-probe.sh
