[workspace]
resolver = "3"
members = [
    "crates/domain",
    "crates/image-cache",
    "crates/metadata-client",
    "crates/state-capture",
    "crates/tracker-sidecar",
    "crates/state-reader",
    "crates/storage",
    "crates/x11-focus-helper",
]

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/opensnaptracker/opensnaptracker"
rust-version = "1.89"

[workspace.dependencies]
anyhow = "1.0"
camino = "1.2"
clap = { version = "4.5", features = ["derive"] }
ctrlc = "3.5"
hex = "0.4"
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
sha2 = "0.10"
tempfile = "3.23"
thiserror = "2.0"
time = { version = "0.3", features = ["formatting", "macros", "serde", "serde-well-known"] }
walkdir = "2.5"
x11rb = "0.13"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"

[workspace.lints.clippy]
todo = "warn"
