[package]
name = "state-capture"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
ctrlc.workspace = true
domain = { path = "../domain" }
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
state-reader = { path = "../state-reader" }
time.workspace = true
walkdir.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
