[package]
name = "tracker-sidecar"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
ctrlc.workspace = true
serde_json.workspace = true
state-reader = { path = "../state-reader" }

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
